--- a/컴입.md
+++ b/컴입.md
@@ -278,7 +278,7 @@ Input data -> Computer with Program -> output data
 	 - 만약 음수일 경우 맨 앞에 부호비트를 1로 바꾼다.
 - 왜 이렇게 보수를 나타내는 지는 이 [블로그](http://sessionk.tistory.com/126)에 잘 설명되어 있다.
 	- 컴퓨터에는 뺄셈연산이 없다
-	- 고로 덧셈에 의해서 뺄셈을 연산을 하게 된다 즉 $$$5 - 5 = 0 $$$는 $$$5 +(- 5) $$$와 같이 처리된다는 뜻이다. 
+	- 고로 덧셈에 의해서 뺄셈을 연산을 하게 된다 즉 $5 - 5 = 0 $는 $5 +(- 5)$와 같이 처리된다는 뜻이다. 
 	- 만약 1의 보수로 나타낸 수를 -연산을 하게 될 경우 0이 두 경우가 나타내게 된다. 1111111<sub>(2)</sub> 혹은 00000000<sub>(2)</sub>
 	- 2의 보수로 나타낸 수로 연산을 실제로 해보면 기가막히게 뺄셈연산을 부호를 바꾸고 더 해줌으로써 가능하다.
 - 1의 보수와 2의 보수는 양수일경우 차이가 없고 음수일경우 1이 크다.
